--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Trackit</string>
     <string name="sign_in_welcome_text">Hi Benjamin, Welcome to Trackit</string>
+    <string name="email_hint_label">Email</string>
+    <string name="password_hint_label">Password</string>
 </resources>
